# Rebecca-v-3.0

./: .gitignore  AGENTS.md  CHANGELOG.md  CORE_AUDIT.md  IMAGE_PROCESSOR_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  META_AGENT_IMPLEMENTATION_REPORT.md  OFFLINE_MODE.md  README-v3.0.md  README.md  REPOSITORY_SUMMARY.md  RUN_GUIDE.md  agent_log.txt  demo_concept_extractor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-git-processor.txt  setup_ocr_dependencies.sh  start_rebecca.ps1  stop_rebecca.ps1  test_kag_basic.py  test_offline_integration.py  test_offline_mode.py
config/: README.md  __init__.py  config.yaml  core.yaml  docker-compose.example.yml
docker/: Dockerfile.api  docker-compose.local.yml  docker-compose.mock.yml
docs/: ARCHITECTURE.md  CI.md  CORE_AUDIT.md  GIT_PROCESSOR_IMPLEMENTATION_REPORT.md  GIT_PROCESSOR_README.md  ROADMAP.md  ROADMAP_TEMP.md  TESTS.md  architecture_blueprint.md  demo_pdf_processor.py  freeze_summary.json  pdf_processor_README.md  pdf_processor_examples.py  simple_demo.py
examples/: git_processor_examples.py  meta_agent_example.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
install/: manual.md  setup_mock.ps1  setup_mock.sh
reports/: base_components_test_results.md
scripts/: bootstrap.ps1  generate_change_summary.py  post_task_summary.sh  run_checks.sh  smoke.ps1  smoke.sh  summarize_failures.py
src/: __init__.py  api.py  configuration.py  requirements.txt
test_env/: pyvenv.cfg
tests/: COMPREHENSIVE_TESTS_REPORT.md  README_COMPREHENSIVE_TESTS.md  SUMMARY_COMPREHENSIVE_TESTS.md  __init__.py  ab_eval_retriever.py  conftest.py  integration_test.py  isolated_git_processor_test.py  nightly_eval.py  simple_git_processor_test.py  test_agent_army.py  test_agent_factory.py  test_agents.py  test_base_agent.py  test_chat_stream.py  test_concept_extractor.py  test_core_adapter.py  test_core_connection.py  test_git_processor.py  test_health.py  test_main_workflow_smoke.py  test_run.py  (+5 more)
(+293 files in other folders)
